# friction

./: .gitignore  Makefile  in.common_regions  in.common_variables  in.down  in.make_amorphous  in.pull  job.sh  make_amorphous.in  notater.md  referanser.md  smaugjob.sh
creep/: Lz_vs_press.py  Makefile  Makefile.new  README.md  abeljob.sh  alpha_quartz.py  average_normal_force.txt  compare_creeps.sh  extract_parameters.py  find_normal_force.py  find_z_pressure.py  fit_lz.py  foo.py  gpujob.sh  in.choosevariant  in.common_groups  in.common_regions  in.common_regions_cone  in.common_regions_sphere  in.common_variables  in.creep  in.down  in.passivate  in.potential_SiO2H2O  in.potential_etc  in.potential_etc_passivated  in.setup  in.write_packmol  interactive.sh  lammpsjob.sh  lammpsjob_gpu.sh  lz_analysis.f90  normal_force.txt  notater.md  odyjob.sh  orthogonal_alpha_quartz.data  plot.py  referanser.md  remove_drift.f90  runlammpsjob.py  (+4 more)
down_pull/: find_normal_force.py  in.common_variables
hysteresis/: CMakeLists.txt  Makefile  abeljob.sh  data.betacristobalite  data_addH.py  in.add_water  in.common_regions  in.common_variables  in.hysteresis  in.make_amorphous  in.make_system  in.passivate  in.potential  in.potential_SiO2H2O  in.write_packmol  job.sh  xyz2dump.py
pull_activation_energy/: in.down  in.potential  in.pull
